--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IntroductionActivity"></activity>
+        <activity android:name=".activites.IntroductionActivity"></activity>
         <activity
-            android:name=".SplashActivity"
+            android:name=".activites.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,10 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SignUpActivity"
+        <activity android:name=".activites.MainActivity"></activity>
+        <activity android:name=".activites.SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SignInActivity"
+        <activity android:name=".activites.SignInActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
